add error code to conf

--- a/config/good_config/test.conf
+++ b/config/good_config/test.conf
@@ -6,6 +6,7 @@ server {
 	server_name thole.42.fr;
 	index index.php;
 
+	error_page 404 405 406 qqch;
 	location / {
 		try_files $uri $uri/ /index.php$is_args$args;
 	}
