added new stuff

--- a/config/good_config/test.conf
+++ b/config/good_config/test.conf
@@ -1,5 +1,9 @@
 server {
 
+}
+
+server {
+
 	listen 443:443;
 
 	root /var/www/wordpress;
@@ -22,7 +26,7 @@ server {
 }
 
 server {
-	listen 443:443;
+	listen 255.0.0.1:443;
 
 	server_name localhost;
 
