added new stuff

--- a/config/good_config/test.conf
+++ b/config/good_config/test.conf
@@ -1,10 +1,12 @@
 server {
+	{
 
+	}
 }
 
 server {
 
-	listen 443:443;
+	listen 443{};
 
 	root /var/www/wordpress;
 	server_name thole.42.fr;
@@ -29,7 +31,10 @@ server {
 	listen 255.0.0.1:443;
 
 	server_name localhost;
-
+	client_max_body_size 0k{
+		
+	};
+	error_page 404 405 406 qqch;
 	location / {
         return 301 https://thole.42.fr$request_uri;
     }
