added new stuff

--- a/config/good_config/test.conf
+++ b/config/good_config/test.conf
@@ -1,12 +1,23 @@
 server {
-	{
+	listen 127.0.0.1;
 
+	error_page 404 ./basic_error_page.html;
+	location /html {
+	    autoindex on;
+	}
+
+	location /test {
+		root /error_pages;
+	}
+
+	location / {
+		return 301 http://localhost;
 	}
 }
 
 server {
 
-	listen 443{};
+	listen 443;
 
 	root /var/www/wordpress;
 	server_name thole.42.fr;
