fake tokenizer prepared, fixing other stuff

--- a/config/good_config/test.conf
+++ b/config/good_config/test.conf
@@ -1,52 +1,73 @@
 server {
-	listen 127.0.0.1;
+	listen 1{}27.0.0.1:443 cocuou ;
 
-	error_page 404 ./basic_error_page.html;
-	location /html {
-	    autoindex on;
-	}
+	server_name webserv ;
+	client_max_body_size 12k ;
 
+	error_page 404 405 406 qqch;
+	
 	location /test {
 		root /error_pages;
 	}
 
+	location / {
+        return 301 http://thole.42.fr$request_uri;
+    }
+	
+	location /html {
+		client_max_body_size 3k;
+	    autoindex on;
+	}
+	
 	location / {
 		return 301 http://localhost;
 	}
 }
 
 server {
+	listen 127.0.0.1:443 ;
 
-	listen 443;
-
-	root /var/www/wordpress;
-	server_name thole.42.fr;
-	index index.php;
+	server_name webserv ;
+	client_max_body_size 13k ;
 
 	error_page 404 405 406 qqch;
-	location / {
-		try_files $uri $uri/ /index.php$is_args$args;
+	
+	location /test {
+		root /error_pages;
 	}
 
-	location ~ \.php$ {
-		fastcgi_split_path_info ^(.+\.php)(/.+)$;
-		include fastcgi_params;
-		fastcgi_pass wordpress:9000;
-		fastcgi_index index.php;
-		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+	location / {
+        return 301 http://thole.42.fr$request_uri;
+    }
+	
+	location /html {
+		client_max_body_size 3k;
+	    autoindex on;
+	}
+	
+	location / {
+		return 301 http://localhost;
 	}
 }
 
 server {
-	listen 255.0.0.1:443;
+	listen 127.0.0.1 ;
 
-	server_name localhost;
-	client_max_body_size 0k{
-		
-	};
+	server_name localhost ;
+	client_max_body_size 12k ;
+
 	error_page 404 405 406 qqch;
+	
+	location /test {
+		root /error_pages cocuou ;
+	}
+	
+	location /html {
+		client_max_body_size 3k;
+	    autoindex on;
+	}
+	
 	location / {
-        return 301 https://thole.42.fr$request_uri;
-    }
+		return 301 http://localhost;
+	}
 }
