so it might work, just gotta test it more lmao

--- a/config/good_config/test.conf
+++ b/config/good_config/test.conf
@@ -1,9 +1,11 @@
 server {
-	listen 1{}27.0.0.1:443 cocuou ;
+	listen 127.0.0.1:443 ;
 
-	server_name webserv ;
-	client_max_body_size 12k ;
-
+	server_name webserv cocuou ;
+	client_max_body_size 12{}k ;
+	server{
+		server_name lol;
+	}
 	error_page 404 405 406 qqch;
 	
 	location /test {
@@ -27,7 +29,7 @@ server {
 server {
 	listen 127.0.0.1:443 ;
 
-	server_name webserv ;
+	server_name webserv cocuou ;
 	client_max_body_size 13k ;
 
 	error_page 404 405 406 qqch;
@@ -59,7 +61,7 @@ server {
 	error_page 404 405 406 qqch;
 	
 	location /test {
-		root /error_pages cocuou ;
+		root /error_pages;
 	}
 	
 	location /html {
