i used dark magic and for some reason the indexing works??? there might be some bugs here and there but we're getting closer

--- a/config/good_config/test.conf
+++ b/config/good_config/test.conf
@@ -1,66 +1,12 @@
 server {
 	listen 127.0.0.1:443 ;
 
-	server_name webserv cocuou ;
-	client_max_body_size 12{}k ;
-	server{
-		server_name lol;
-	}
-	error_page 404 405 406 qqch;
-	
-	location /test {
-		root /error_pages;
-	}
-
-	location / {
-        return 301 http://thole.42.fr$request_uri;
-    }
-	
-	location /html {
-		client_max_body_size 3k;
-	    autoindex on;
-	}
-	
-	location / {
-		return 301 http://localhost;
-	}
-}
-
-server {
-	listen 127.0.0.1:443 ;
-
-	server_name webserv cocuou ;
-	client_max_body_size 13k ;
-
-	error_page 404 405 406 qqch;
-	
-	location /test {
-		root /error_pages;
-	}
-
-	location / {
-        return 301 http://thole.42.fr$request_uri;
-    }
-	
-	location /html {
-		client_max_body_size 3k;
-	    autoindex on;
-	}
-	
-	location / {
-		return 301 http://localhost;
-	}
-}
-
-server {
-	listen 127.0.0.1 ;
-
-	server_name localhost ;
+	server_name webserv ;
 	client_max_body_size 12k ;
 
 	error_page 404 405 406 qqch;
-	
-	location /test {
+	root /html;
+	location = /test/ {
 		root /error_pages;
 	}
 	
@@ -69,7 +15,7 @@ server {
 	    autoindex on;
 	}
 	
-	location / {
+	location = / {
 		return 301 http://localhost;
 	}
 }
