--- a/config/good_config/test.conf
+++ b/config/good_config/test.conf
@@ -4,7 +4,7 @@ server {
 	server_name webserv ;
 	client_max_body_size 12k ;
 
-	error_page 404 405 406 qqch;
+	error_page 404 405 406 /toto/error_page ;
 	root /html;
 	location = /test/ {
 		root /error_pages;
@@ -13,6 +13,7 @@ server {
 	location /html {
 		client_max_body_size 3k;
 	    autoindex on;
+		index toto.html;
 	}
 	
 	location = / {
