--- a/nginx_docker/Dockerfile
+++ b/nginx_docker/Dockerfile
@@ -2,8 +2,10 @@
 FROM nginx:latest
 
 RUN apt-get update && apt-get upgrade -y && apt-get install vim -y
-
 # Copy your custom nginx.conf to the container
+
+RUN mkdir -p /etc/share/nginx/post
+
 COPY nginx.conf /etc/nginx/nginx.conf
 
 # Copy your website content to the default Nginx public directory
