--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -1,41 +1,51 @@
-# nginx.conf
-
-user  nginx;
-worker_processes  auto;
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
-
 events {
-    worker_connections  1024;
+    worker_connections 1024;
 }
 
 http {
-    include       /etc/nginx/mime.types;
+    include       mime.types;
     default_type  application/octet-stream;
-
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
-    
-    access_log  /var/log/nginx/access.log  main;
 
     sendfile        on;
     keepalive_timeout  65;
-
-    gzip  on;
 
     server {
         listen       4247;
         server_name  localhost;
 
-        root   /usr/share/nginx/html;
-        index  index.html;
+        # Access and error logs
+        access_log  /var/log/nginx/access.log;
+        error_log   /var/log/nginx/error.log;
 
-        location / {
+        location /endpoint {
+            # Log all GET and POST requests to a file
+            access_log /var/log/nginx/endpoint_access.log combined;
+
+            # Handle GET requests
+            root /usr/share/nginx/html;
+            index index.html;
+
+            # Custom handling for POST requests
+            set $post_data_handled 0;
+            if ($request_method = POST) {
+                set $post_data_handled 1;
+            }
+
+            # Return response for POST requests
+            if ($post_data_handled) {
+                return 200 'POST request received';
+            }
+
+            # Default behavior for GET requests
             try_files $uri $uri/ =404;
+
+            # Handle other request methods with a 405 Method Not Allowed response
+            if ($request_method != GET) {
+                return 405;
+            }
         }
 
-        error_page  500 502 503 504  /50x.html;
+        error_page   500 502 503 504  /50x.html;
         location = /50x.html {
             root   /usr/share/nginx/html;
         }
