--- a/config/good_config/test.conf
+++ b/config/good_config/test.conf
@@ -7,6 +7,7 @@ server {
 	error_page 404 405 406 /toto/error_page ;
 	root /html;
 	location = /test/ {
+		set_method GET on;
 		root /error_pages;
 		cgi py exec.py;
 	}
