--- a/config/good_config/test2.conf
+++ b/config/good_config/test2.conf
@@ -3,7 +3,7 @@ server {
 
 	server_name  cocuou ;
 	client_max_body_size 12k ;
-	error_page 404 405 406 qqch;
+	error_page 404 405 406 /qqch;
 	
 	location = /test/ {
 		root /error_pages;
@@ -33,7 +33,6 @@ server {
 
 	location = /error_pages {
 		root /var/www/err;
-		index index.html;
 	}
 }
 
@@ -57,8 +56,9 @@ server {
 	server_name localhost ;
 	client_max_body_size 12k ;
 
-	error_page 404 405 406 qqch;
-	
+	error_page 404 405 406 /qqch;
+	root /html;
+
 	location /test {
 		root /error_pages;
 	}
