--- a/config/good_config/test.conf
+++ b/config/good_config/test.conf
@@ -3,22 +3,34 @@ server {
 
 	server_name webserv ;
 	client_max_body_size 12k ;
+	root /html;
 
 	error_page 404 405 406 /toto/error_page ;
-	root /html;
+	
 	location = /test/ {
 		set_method GET on;
 		root /error_pages;
+		index toto.html;
 		cgi py exec.py;
 	}
 	
-	location /html {
+	location /htmli {
 		client_max_body_size 3k;
 	    autoindex on;
-		index toto.html;
 	}
 	
-	location = / {
+	location /coucou/ {
+		client_max_body_size 3k;
+	    autoindex on;
+		root /error_pages;
+		index toto.html;
+	}
+
+	location / {
+		index coucou;
+	}
+	location = /coucou {
 		return 301 http://localhost;
 	}
+
 }
