--- a/nginx_docker/Makefile
+++ b/nginx_docker/Makefile
@@ -1,7 +1,8 @@
 IMAGE_NAME = nginx_img
 CONTAINER_NAME = nginx_my
 DOCKERFILE_PATH = .
-PORT = 4247
+PORT1 = 4247
+PORT2 = 4248
 
 all: build run
 
@@ -9,7 +10,7 @@ build :
 	docker build -t ${IMAGE_NAME} ${DOCKERFILE_PATH}
 
 run:
-	docker run -d --name ${CONTAINER_NAME} -p ${PORT}:${PORT} ${IMAGE_NAME}
+	docker run -d --name ${CONTAINER_NAME} -p ${PORT1}:${PORT1} -p ${PORT2}:${PORT2} ${IMAGE_NAME}
 
 exec:
 	docker exec -it ${CONTAINER_NAME} /bin/bash
@@ -24,5 +25,7 @@ rmi:
 	docker rmi ${IMAGE_NAME}
 
 clean: rm rmi
+
+re: stop clean all
 
 .PHONY: all run stop rm rmi clean
