--- a/nginx_docker/Dockerfile
+++ b/nginx_docker/Dockerfile
@@ -11,8 +11,17 @@ COPY nginx.conf /etc/nginx/nginx.conf
 # Copy your website content to the default Nginx public directory
 COPY index.html /usr/share/nginx/html/index.html
 
+RUN mkdir -p /usr/share/nginx/html2
+RUN mkdir -p /usr/share/nginx/html2/404.html
+
+COPY index2.html /usr/share/nginx/html2/index.html
+COPY 404.html /usr/share/nginx/html2/404.html/404.html
+
+
 # Expose port 80 to the host
 EXPOSE 4247
+
+EXPOSE 4248
 
 # Start Nginx when the container launches
 CMD ["nginx", "-g", "daemon off;"]
