--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -11,13 +11,13 @@ http {
 
     server {
         listen       4247;
-        server_name  localhost;
+        server_name  localhost4247;
 
         # Access and error logs
         access_log  /var/log/nginx/access.log;
         error_log   /var/log/nginx/error.log;
 
-        location /endpoint {
+        location / {
             # Log all GET and POST requests to a file
             access_log /var/log/nginx/endpoint_access.log combined;
 
@@ -48,6 +48,27 @@ http {
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
             root   /usr/share/nginx/html;
+        }
+    }
+    server {
+        listen       4248;
+        server_name  localhost4248;
+
+        root   /usr/share/nginx/html2;
+        index  index.html;
+
+        location / {
+            try_files $uri $uri/ =404;
+        }
+
+        error_page  500 502 503 504  /50x.html;
+        location /50x.html {
+            root   /usr/share/nginx/html;
+        }
+
+        error_page 404 /404.html;
+        location  = /404.html/ {
+            root /usr/share/nginx/html2;
         }
     }
 }
