--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -15,7 +15,7 @@ http {
 
         # Access and error logs
         access_log  /var/log/nginx/access.log;
-        error_log   /var/log/nginx/error.log;
+        error_log   /var/log/nginx/error.log debug;
 
         location / {
             # Log all GET and POST requests to a file
@@ -33,7 +33,7 @@ http {
 
             # Return response for POST requests
             if ($post_data_handled) {
-                return 200 'POST request received';
+                return 200 'POST request received on default server';
             }
 
             # Default behavior for GET requests
@@ -51,24 +51,38 @@ http {
         }
     }
     server {
-        listen       4248;
-        server_name  localhost4248;
+        listen       4247;
+        server_name  localhostPOST;
 
-        root   /usr/share/nginx/html2;
-        index  index.html;
+        # Access and error logs
+        access_log  /var/log/nginx/access.log;
+        error_log   /var/log/nginx/error.log debug;
 
         location / {
+            # Log all GET and POST requests to a file
+            access_log /var/log/nginx/endpoint_access.log combined;
+
+            # Custom handling for POST requests
+            if ($request_method = POST) {
+                return 200 'POST request received on POST server';
+            }
+
+            # Default behavior for GET requests
+            root /usr/share/nginx/html;
+            index index.html;
+
+            # Handle other request methods with a 405 Method Not Allowed response
+            if ($request_method != GET) {
+                return 405;
+            }
+
+            # Default behavior
             try_files $uri $uri/ =404;
         }
 
-        error_page  500 502 503 504  /50x.html;
-        location /50x.html {
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
             root   /usr/share/nginx/html;
-        }
-
-        error_page 404 /404.html;
-        location  = /404.html/ {
-            root /usr/share/nginx/html2;
         }
     }
 }
