added print in makefile if you wanna print everything and I added all the necessary paths to each value (I hope so)

--- a/config/good_config/test.conf
+++ b/config/good_config/test.conf
@@ -8,15 +8,16 @@ server {
 	error_page 404 405 406 /toto/error_page ;
 	
 	location = /test/ {
-		set_method GET on;
+		set_method GET off;
 		root /error_pages;
-		index toto.html;
+		index toto.html coucou.html;
 		cgi py exec.py;
 	}
 	
 	location /htmli {
 		client_max_body_size 3k;
 	    autoindex on;
+		root /;
 	}
 	
 	location /coucou/ {
