--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -58,7 +58,7 @@ http {
         access_log  /var/log/nginx/access.log;
         error_log   /var/log/nginx/error.log debug;
 
-        location / {
+        location /html2 {
             # Log all GET and POST requests to a file
             access_log /var/log/nginx/endpoint_access.log combined;
 
@@ -68,8 +68,8 @@ http {
             }
 
             # Default behavior for GET requests
-            root /usr/share/nginx/html;
-            index index.html;
+            root /usr/share/nginx;
+            # index index.html;
 
             # Handle other request methods with a 405 Method Not Allowed response
             if ($request_method != GET) {
