--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -6,36 +6,88 @@ error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
 events {
-    worker_connections  1024;
+    worker_connections 1024;
 }
 
 http {
-    include       /etc/nginx/mime.types;
+    include       mime.types;
     default_type  application/octet-stream;
-
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
-    
-    access_log  /var/log/nginx/access.log  main;
 
     sendfile        on;
     keepalive_timeout  65;
 
-    gzip  on;
-
     server {
         listen       4247;
-        server_name  localhost;
+        server_name  localhost4247;
 
-        root   /usr/share/nginx/html;
-        index  index.html;
+        # Access and error logs
+        access_log  /var/log/nginx/access.log;
+        error_log   /var/log/nginx/error.log debug;
 
         location / {
+            # Log all GET and POST requests to a file
+            access_log /var/log/nginx/endpoint_access.log combined;
+
+            # Handle GET requests
+            root /usr/share/nginx/html;
+            index index.html;
+
+            # Custom handling for POST requests
+            set $post_data_handled 0;
+            if ($request_method = POST) {
+                set $post_data_handled 1;
+            }
+
+            # Return response for POST requests
+            if ($post_data_handled) {
+                return 200 'POST request received on default server';
+            }
+
+            # Default behavior for GET requests
+            try_files $uri $uri/ =404;
+
+            # Handle other request methods with a 405 Method Not Allowed response
+            if ($request_method != GET) {
+                return 405;
+            }
+        }
+
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   /usr/share/nginx/html;
+        }
+    }
+    server {
+        listen       4247;
+        server_name  localhostPOST;
+
+        # Access and error logs
+        access_log  /var/log/nginx/access.log;
+        error_log   /var/log/nginx/error.log debug;
+
+        location /html2 {
+            # Log all GET and POST requests to a file
+            access_log /var/log/nginx/endpoint_access.log combined;
+
+            # Custom handling for POST requests
+            if ($request_method = POST) {
+                return 200 'POST request received on POST server';
+            }
+
+            # Default behavior for GET requests
+            root /usr/share/nginx;
+            # index index.html;
+
+            # Handle other request methods with a 405 Method Not Allowed response
+            if ($request_method != GET) {
+                return 405;
+            }
+
+            # Default behavior
             try_files $uri $uri/ =404;
         }
 
-        error_page  500 502 503 504  /50x.html;
+        error_page   500 502 503 504  /50x.html;
         location = /50x.html {
             root   /usr/share/nginx/html;
         }
