--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -58,7 +58,7 @@ http {
         access_log  /var/log/nginx/access.log;
         error_log   /var/log/nginx/error.log debug;
 
-        location /html2 {
+        location /html2/ {
             # Log all GET and POST requests to a file
             access_log /var/log/nginx/endpoint_access.log combined;
 
