--- a/nginx_docker/Dockerfile
+++ b/nginx_docker/Dockerfile
@@ -7,6 +7,13 @@ RUN apt-get update && apt-get upgrade -y && apt-get install vim -y
 # Copy your custom nginx.conf to the container
 
 RUN mkdir -p /etc/share/nginx/post
+RUN mkdir -p /etc/share/nginx/html/html2
+RUN mkdir -p /etc/share/nginx/html/html3
+RUN mkdir -p /etc/share/nginx/html/html3/html2
+RUN mkdir -p /etc/share/nginx/html/html2/html3
+COPY index.html /etc/share/nginx/html/html2/html3/index.html
+COPY ${SPACE} /etc/share/nginx/html/html3/html2/index.html
+
 
 COPY nginx.conf /etc/nginx/nginx.conf
 
