--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -11,18 +11,19 @@ http {
 
     server {
         listen       4247;
-        server_name  localhost4247;
+        server_name  webserv;
 
         # Access and error logs
         access_log  /var/log/nginx/access.log;
         error_log   /var/log/nginx/error.log debug;
+        root /usr/share/nginx/html;
 
-        location / {
+        location /html3/ {
             # Log all GET and POST requests to a file
             access_log /var/log/nginx/endpoint_access.log combined;
 
             # Handle GET requests
-            root /usr/share/nginx/html;
+            root /html2;
             index index.html;
 
             # Custom handling for POST requests
@@ -69,7 +70,7 @@ http {
 
             # Default behavior for GET requests
             root /usr/share/nginx;
-            # index index.html;
+            index index.html;
 
             # Handle other request methods with a 405 Method Not Allowed response
             if ($request_method != GET) {
