save close client connection

--- a/config/good_config/test2.conf
+++ b/config/good_config/test2.conf
@@ -1,7 +1,7 @@
 server {
 	listen 127.0.0.1:4244 ;
 
-	server_name  cocuou ;
+	server_name  cocuou coucou2;
 	client_max_body_size 12k ;
 	error_page 404 405 406 /qqch;
 	
@@ -51,7 +51,7 @@ server {
 }
 
 server {
-	listen 127.0.0.1:80 ;
+	listen 127.0.0.1:4246 ;
 
 	server_name localhost ;
 	client_max_body_size 12k ;
