better precise location

--- a/config/good_config/test.conf
+++ b/config/good_config/test.conf
@@ -1,5 +1,5 @@
 server {
-	listen 127.0.0.1:443 ;
+	listen 127.0.0.1:4248 ;
 
 	server_name webserv ;
 	client_max_body_size 12k ;
@@ -20,14 +20,14 @@ server {
 		root /;
 	}
 	
-	location /coucou/ {
+	location /coucou/html/ {
 		client_max_body_size 3k;
 	    autoindex on;
-		root /error_pages;
+		root /error_pages/;
 		index toto.html;
 	}
 
-	location / {
+	location /coucou/ {
 		index coucou;
 	}
 	location = /coucou {
