--- a/nginx_docker/Dockerfile
+++ b/nginx_docker/Dockerfile
@@ -7,12 +7,14 @@ RUN apt-get update && apt-get upgrade -y && apt-get install vim -y
 # Copy your custom nginx.conf to the container
 
 RUN mkdir -p /etc/share/nginx/post
-RUN mkdir -p /etc/share/nginx/html/html2
-RUN mkdir -p /etc/share/nginx/html/html3
-RUN mkdir -p /etc/share/nginx/html/html3/html2
-RUN mkdir -p /etc/share/nginx/html/html2/html3
-COPY index.html /etc/share/nginx/html/html2/html3/index.html
-COPY ${SPACE} /etc/share/nginx/html/html3/html2/index.html
+RUN mkdir -p /usr/share/nginx/html/html2
+RUN mkdir -p /usr/share/nginx/html/html3
+RUN mkdir -p /usr/share/nginx/html/html3/html2
+RUN mkdir -p /usr/share/nginx/html/html2/html3
+COPY index3.html /usr/share/nginx/html/html2/html3/index.html
+COPY index2.html /usr/share/nginx/html/html2/index.html
+COPY index3.html /usr/share/nginx/html/html3/html2/index.html
+COPY ${SPACE} /usr/share/nginx/html/html3/html2/index.html
 
 
 COPY nginx.conf /etc/nginx/nginx.conf
@@ -22,11 +24,13 @@ COPY index.html /usr/share/nginx/html/index.html
 COPY ${SPACE} /usr/share/nginx/html/${SPACE}
 
 RUN mkdir -p /usr/share/nginx/html2
-RUN mkdir -p /usr/share/nginx/html2/404.html
 
 COPY index2.html /usr/share/nginx/html2/index.html
 COPY 404.html /usr/share/nginx/html2/404.html/404.html
+COPY 404.html /usr/share/nginx/html/404.html
+RUN chmod 000 /usr/share/nginx/html/404.html
 
+WORKDIR /
 
 # Expose port 80 to the host
 EXPOSE 4247
