--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -23,7 +23,7 @@ http {
             access_log /var/log/nginx/endpoint_access.log combined;
 
             # Handle GET requests
-            root /html2;
+            root /html2/;
             index index.html;
 
             # Custom handling for POST requests
@@ -50,6 +50,11 @@ http {
         location = /50x.html {
             root   /usr/share/nginx/html;
         }
+        error_page 404 /404.html;
+        location = /404.html{
+            root /usr/share/nginx/html;
+            allow all;
+        }
     }
     server {
         listen       4247;
@@ -59,7 +64,7 @@ http {
         access_log  /var/log/nginx/access.log;
         error_log   /var/log/nginx/error.log debug;
 
-        location /html2/ {
+        location /html2 {
             # Log all GET and POST requests to a file
             access_log /var/log/nginx/endpoint_access.log combined;
 
