--- a/config/good_config/test.conf
+++ b/config/good_config/test.conf
@@ -5,7 +5,7 @@ server {
 	client_max_body_size 12k ;
 	root /html;
 
-	error_page 404 405 406 /toto/error_page ;
+	error_page 404 405 406 /error_pages/;
 	
 	location = /test/ {
 		set_method GET off;
@@ -32,6 +32,9 @@ server {
 	}
 	location = /coucou {
 		return 301 http://localhost;
+	}
+	location / {
+		root /error_pages;
 	}
 
 }
