got a main and begin testing, remove serverConf check before getting host and make function that check parse info against Serverconf

--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -8,6 +8,7 @@ http {
 
     sendfile        on;
     keepalive_timeout  65;
+    client_max_body_size 100;
 
     server {
         listen       4247;
