here comes the brute force of html

--- a/config/good_config/test.conf
+++ b/config/good_config/test.conf
@@ -12,19 +12,19 @@ server {
 		root /error_pages;
 		index toto.html coucou.html;
 		cgi py exec.py;
+		upload_location /test/;
 	}
 	
 	location /htmli {
 		client_max_body_size 3k;
 	    autoindex on;
-		root /;
+		root /error_pages;
 	}
 	
-	location /coucou/html/ {
+	location /coucou/test/ {
 		client_max_body_size 3k;
 	    autoindex on;
-		root /error_pages/;
-		index toto.html;
+		index index.html;
 	}
 
 	location /coucou/ {
