--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -12,13 +12,13 @@ http {
 
     server {
         listen       4247;
-        server_name  webserv ;
+        server_name  webserv;
         # Access and error logs
         access_log  /var/log/nginx/access.log;
         error_log   /var/log/nginx/error.log debug;
         root /usr/share/nginx/html;
 
-        location /html3/ {
+        location / {
             # Log all GET and POST requests to a file
             access_log /var/log/nginx/endpoint_access.log combined;
 
