--- a/config/good_config/test.conf
+++ b/config/good_config/test.conf
@@ -5,7 +5,7 @@ server {
 	client_max_body_size 12k ;
 	root /html;
 
-	error_page 404 405 406 /error_pages/;
+	error_page 404 405 406 /index.html;
 	
 	location = /test/ {
 		set_method GET off;
@@ -15,6 +15,10 @@ server {
 		upload_location /test/;
 	}
 	
+	location = /index.html {
+		root /error_pages;
+	}
+
 	location /htmli {
 		client_max_body_size 3k;
 	    autoindex on;
