--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -18,7 +18,7 @@ http {
         error_log   /var/log/nginx/error.log debug;
         root /usr/share/nginx/html;
 
-        location / {
+        location /html2 {
             # Log all GET and POST requests to a file
             access_log /var/log/nginx/endpoint_access.log combined;
 
@@ -50,7 +50,13 @@ http {
                 return 405;
             }
         }
-
+        location / {
+            return 418;
+        }
+        #
+        # location /bonjour{
+        #     return 305;
+        # }
         location /redirect{
             return 301 https://wikipedia.fr;
         }
