fuck les include

--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -50,8 +50,12 @@ http {
                 return 405;
             }
         }
-        location / {
+        location /bonjou/ {
             return 418;
+        }
+        location /bonjour/salut
+            {
+            return 419;
         }
         #
         # location /bonjour{
