client pour leo

--- a/nginx_docker/Dockerfile
+++ b/nginx_docker/Dockerfile
@@ -20,7 +20,7 @@ COPY ${SPACE} /usr/share/nginx/html/html3/html2/index.html
 COPY nginx.conf /etc/nginx/nginx.conf
 
 # Copy your website content to the default Nginx public directory
-COPY index.html /usr/share/nginx/html/index.html
+COPY index.html /usr/share/nginx/html/bonjour.html
 COPY ${SPACE} /usr/share/nginx/html/space.html
 # RUN chmod 000 /usr/share/nginx/html/space.html
 RUN mkdir -p /usr/share/nginx/html2
@@ -28,7 +28,7 @@ RUN mkdir -p /usr/share/nginx/html2
 COPY index2.html /usr/share/nginx/html2/index.html
 COPY 404.html /usr/share/nginx/html2/404.html/404.html
 COPY 404.html /usr/share/nginx/html/404.html
-
+RUN rm /usr/share/nginx/html/index.html
 WORKDIR /
 
 # Expose port 80 to the host
