--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -18,14 +18,14 @@ http {
         error_log   /var/log/nginx/error.log debug;
         root /usr/share/nginx/html;
 
-        location /html2 {
+        location / {
             # Log all GET and POST requests to a file
             access_log /var/log/nginx/endpoint_access.log combined;
 
             # Handle GET requests
             # root /html/;
-            index index.html;
-
+            # index index.html;
+            autoindex on;
             # Custom handling for POST requests
             set $post_data_handled 0;
             if ($request_method = POST) {
@@ -33,24 +33,24 @@ http {
             }       
             add_header X-Debug-Webserv-Type "$http_webserv_type" always;
             add_header X-Debug-Request-Method $request_method always;
-            if ($http_webserv_type = "bonjour"){
-                return 200 'POST request received on default server with webserv_type = bonjour';
-                }
-
+            # if ($http_webserv_type = "bonjour"){
+            #     return 200 'POST request received on default server with webserv_type = bonjour';
+            #     }
+            #
             # Return response for POST requests
             if ($post_data_handled) {
                 return 200 'POST request received on default server';
             }
 
             # Default behavior for GET requests
-            try_files $uri $uri/ =404;
+            # try_files $uri $uri/ =404;
 
             # Handle other request methods with a 405 Method Not Allowed response
             if ($request_method != GET) {
                 return 405;
             }
         }
-        location /bonjou/ {
+        location /bonjour/ {
             return 418;
         }
         location /bonjour/salut
