--- a/config/good_config/test.conf
+++ b/config/good_config/test.conf
@@ -3,7 +3,7 @@ server {
 
 	server_name webserv ;
 	client_max_body_size 12k ;
-	root /html/error_pages;
+	root /html;
 
 	error_page 404 405 406 /404.html;
 	
