--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -18,14 +18,14 @@ http {
         error_log   /var/log/nginx/error.log debug;
         root /usr/share/nginx/html;
 
-        location / {
+        location /html2/ {
             # Log all GET and POST requests to a file
             access_log /var/log/nginx/endpoint_access.log combined;
 
             # Handle GET requests
             # root /html/;
             # index index.html;
-            autoindex on;
+            # autoindex on;
             # Custom handling for POST requests
             set $post_data_handled 0;
             if ($request_method = POST) {
@@ -46,6 +46,13 @@ http {
             # try_files $uri $uri/ =404;
 
             # Handle other request methods with a 405 Method Not Allowed response
+            if ($request_method != GET) {
+                return 405;
+            }
+        }
+        location /html2/html3/ {
+            access_log /var/log/nginx/endpoint_access.log combined;
+            autoindex on;
             if ($request_method != GET) {
                 return 405;
             }
@@ -248,44 +255,44 @@ http {
             allow all;
         }
     }
-    server {
-        listen       4247;
-        server_name  localhostPOST;
-
-        # Access and error logs
-        access_log  /var/log/nginx/access.log;
-        error_log   /var/log/nginx/error.log debug;
-
-        location /html2 {
-                   add_header X-Debug-Webserv-Type $http_webserv_type;
-        add_header X-Debug-Request-Method $request_method;
-            if ($http_webserv_type = "bonjour"){
-                return 200 'POST request received on POST server with webserv_type = bonjour';
-                }
-            # Log all GET and POST requests to a file
-            access_log /var/log/nginx/endpoint_access.log combined;
-
-            # Custom handling for POST requests
-            if ($request_method = POST) {
-                return 200 'POST request received on POST server';
-            }
-
-            # Default behavior for GET requests
-            root /usr/share/nginx;
-            index index.html;
-
-            # Handle other request methods with a 405 Method Not Allowed response
-            if ($request_method != GET) {
-                return 405;
-            }
-
-            # Default behavior
-            try_files $uri $uri/ =404;
-        }
-
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   /usr/share/nginx/html;
-        }
-    }
+    # server {
+    #     listen       4247;
+    #     server_name  localhostPOST;
+    #
+    #     # Access and error logs
+    #     access_log  /var/log/nginx/access.log;
+    #     error_log   /var/log/nginx/error.log debug;
+    #
+    #     location /html2 {
+    #                add_header X-Debug-Webserv-Type $http_webserv_type;
+    #     add_header X-Debug-Request-Method $request_method;
+    #         if ($http_webserv_type = "bonjour"){
+    #             return 200 'POST request received on POST server with webserv_type = bonjour';
+    #             }
+    #         # Log all GET and POST requests to a file
+    #         access_log /var/log/nginx/endpoint_access.log combined;
+    #
+    #         # Custom handling for POST requests
+    #         if ($request_method = POST) {
+    #             return 200 'POST request received on POST server';
+    #         }
+    #
+    #         # Default behavior for GET requests
+    #         root /usr/share/nginx;
+    #         index index.html;
+    #
+    #         # Handle other request methods with a 405 Method Not Allowed response
+    #         if ($request_method != GET) {
+    #             return 405;
+    #         }
+    #
+    #         # Default behavior
+    #         try_files $uri $uri/ =404;
+    #     }
+    #
+    #     error_page   500 502 503 504  /50x.html;
+    #     location = /50x.html {
+    #         root   /usr/share/nginx/html;
+    #     }
+    # }
 }
