--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -25,7 +25,7 @@ http {
             # Handle GET requests
             # root /html/;
             # index index.html;
-            # autoindex on;
+            autoindex on;
             # Custom handling for POST requests
             set $post_data_handled 0;
             if ($request_method = POST) {
@@ -50,13 +50,13 @@ http {
                 return 405;
             }
         }
-        location /html2/html3/ {
-            access_log /var/log/nginx/endpoint_access.log combined;
-            autoindex on;
-            if ($request_method != GET) {
-                return 405;
-            }
-        }
+        # location /html2/html3/ {
+        #     access_log /var/log/nginx/endpoint_access.log combined;
+        #     autoindex on;
+        #     if ($request_method != GET) {
+        #         return 405;
+        #     }
+        # }
         location /bonjour/ {
             return 418;
         }
