save bounce client webserv class

--- a/config/good_config/test2.conf
+++ b/config/good_config/test2.conf
@@ -74,11 +74,11 @@ server {
 }
 
 server {
-	listen 127.0.0.1:4245 ;
+	listen 127.0.0.1:4244 ;
 
-	server_name localhost;
+	server_name bonjour;
 	client_max_body_size 13k ;
-
+	default
 	error_page 404 405 406 /error_pages;
 
 	location = /error_pages/ {
