image works but broke favicon.ico, good luck for tomorrow

--- a/config/good_config/test.conf
+++ b/config/good_config/test.conf
@@ -14,7 +14,12 @@ server {
 		client_max_body_size 3k;
 	    autoindex on;
 	}
-	
+	location /cat.png{
+		autoindex on;
+	}
+	location /favicon.ico{
+		autoindex on;
+	}
 	location  /coucou/test/ {
 		client_max_body_size 3k;
 	    autoindex on;
