--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -64,6 +64,13 @@ http {
             {
             return 419;
         }
+        location /favicon.ico {
+
+            access_log /var/log/nginx/endpoint_access.log combined;
+             if ($request_method != GET) {
+                return 405;
+            }
+        }
         #
         # location /bonjour{
         #     return 305;
