flemme de tout changer

--- a/config/good_config/test.conf
+++ b/config/good_config/test.conf
@@ -10,16 +10,24 @@ server {
 	location = /418.html {
 	}
 
-	location /htmli {
+	location /imagePNG.html {
 		client_max_body_size 3k;
 	    autoindex on;
 	}
 	location /cat.png{
-		autoindex on;
 	}
+
 	location /favicon.ico{
 		autoindex on;
 	}
+	location /imageGIF.html{
+
+	}
+
+	location /kitty-puke-puke.gif{
+
+	}
+
 	location  /coucou/test/ {
 		client_max_body_size 3k;
 	    autoindex on;
