image/gif working lets gofixed leak in directory listing

--- a/config/good_config/test.conf
+++ b/config/good_config/test.conf
@@ -24,7 +24,7 @@ server {
 
 	}
 
-	location /kitty-puke-puke.gif{
+	location /catGif.gif{
 
 	}
 
@@ -39,7 +39,7 @@ server {
 	}
 
 	location / {
-		root /error_pages;
+		autoindex on;
 	}
 
 }
