j'ai fix beaucoup de mes betises

--- a/config/good_config/cgi.conf
+++ b/config/good_config/cgi.conf
@@ -1,18 +1,21 @@
 server {
     listen 127.0.0.1:4250 ;
-
     server_name webserv ;
     client_max_body_size 12k ;
-    root /html;
+    root ./html/;
 
     error_page 404 405 406 /418.html;
     
 
     location /cgi/ {
-        root /python/;
+        
+        root ./python/;
+        
 		autoindex on;
-        cgi .php cookies.php;
+    
+        cgi .php /coucou/cookies.php;
+        
         upload_location /cookies/;
+        path_info off;
 	}
-
 }
