--- a/config/good_config/taylor.conf
+++ b/config/good_config/taylor.conf
@@ -1,7 +1,7 @@
 server {
     server_name Taylor;
     listen 4250;
-    root /website/taylor;
+    root ./website/taylor;
     location / {
         index site.html;
     }
