--- a/config/good_config/cgi.conf
+++ b/config/good_config/cgi.conf
@@ -18,4 +18,9 @@ server {
         upload_location /cookies/;
         path_info off;
 	}
+    location /cgi/python/ {            
+        cgi .py welcome.py;        
+        upload_location /cookies/;
+        path_info on;
+    }
 }
