fixed 403 error in opening file

--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -25,7 +25,7 @@ http {
             # Handle GET requests
             # root /html/;
             # index index.html;
-            autoindex on;
+            # autoindex on;
             # Custom handling for POST requests
             set $post_data_handled 0;
             if ($request_method = POST) {
