--- a/config/good_config/cgi.conf
+++ b/config/good_config/cgi.conf
@@ -1,26 +1,17 @@
 server {
-    listen 127.0.0.1:4250 ;
+    listen 127.0.0.1:4251 ;
     server_name webserv ;
     client_max_body_size 12k ;
     root ./html/;
 
     error_page 404 405 406 /404.html;
     
-
-    location /cgi/ {
-        
-        root ./python/;
-        
-		autoindex on;
-    
-        cgi .php /coucou/cookies.php;
-        
-        upload_location /cookies/;
-        path_info off;
-	}
     location /cgi/python/ {            
         cgi .py welcome.py;        
         upload_location /cookies/;
         path_info on;
+    }
+    location / {
+        autoindex on;
     }
 }
