--- a/config/good_config/cgi.conf
+++ b/config/good_config/cgi.conf
@@ -2,14 +2,15 @@ server {
     listen 127.0.0.1:4250 ;
     server_name webserv ;
     client_max_body_size 12k ;
-    root ./html/;
+    root ./html/cgi;
 
     error_page 404 405 406 /404.html;
     
-    location /cgi/python/ {            
+    location /python/ {            
         cgi .py welcome.py;        
         upload_location /cookies/;
         path_info on;
+        set_method POST DELETE GET on;
     }
     location / {
         autoindex on;
