--- a/config/good_config/cgi.conf
+++ b/config/good_config/cgi.conf
@@ -13,6 +13,7 @@ server {
         set_method POST DELETE GET on;
     }
     location / {
+        set_method POST DELETE GET on;
         autoindex on;
     }
 }
