--- a/config/good_config/cgi.conf
+++ b/config/good_config/cgi.conf
@@ -1,5 +1,5 @@
 server {
-    listen 127.0.0.1:4251 ;
+    listen 127.0.0.1:4250;
     server_name webserv ;
     client_max_body_size 12k ;
     root ./html/cgi;
@@ -8,6 +8,12 @@ server {
     
     location /python/ {            
         cgi .py welcome.py;        
+        upload_location /cookies/;
+        path_info on;
+        set_method POST DELETE GET on;
+    }
+    location /php/ {            
+        cgi .php welcome.php;        
         upload_location /cookies/;
         path_info on;
         set_method POST DELETE GET on;
