added ruby cgi, php doesn't work lol

--- a/config/good_config/cgi.conf
+++ b/config/good_config/cgi.conf
@@ -12,6 +12,12 @@ server {
         path_info on;
         set_method POST DELETE GET on;
     }
+    location /ruby/ {            
+        cgi .rb welcome.rb;        
+        upload_location /cookies/;
+        path_info on;
+        set_method POST DELETE GET on;
+    }
     location /php/ {            
         cgi .php welcome.php;        
         upload_location /cookies/;
