added fun php script

--- a/config/good_config/cgi.conf
+++ b/config/good_config/cgi.conf
@@ -19,7 +19,7 @@ server {
         set_method POST DELETE GET on;
     }
     location /php/ {            
-        cgi .php welcome.php;        
+        cgi .php jokes.php;        
         upload_location /cookies/;
         path_info on;
         set_method POST DELETE GET on;
