cgi finished now gotta fix the kill

--- a/config/good_config/ultimate.conf
+++ b/config/good_config/ultimate.conf
@@ -44,6 +44,12 @@ server {
     location / {
         autoindex on;
     }
+    location /html/cgi_failure/ {
+        cgi .py loop.py;        
+        upload_location /cookies/;
+        path_info on;
+        set_method POST DELETE GET on;
+    }
 }
 server {
     server_name webserv;
