--- a/config/good_config/ultimate.conf
+++ b/config/good_config/ultimate.conf
@@ -18,6 +18,12 @@ server {
         path_info on;
         set_method POST DELETE GET on;
     }
+    location /perl/ {            
+        cgi .pl welcome.pl;        
+        upload_location /cookies/;
+        path_info on;
+        set_method POST DELETE GET on;
+    }
     location /php/ {            
         cgi .php jokes.php;        
         upload_location /cookies/;
