--- a/config/good_config/ultimate.conf
+++ b/config/good_config/ultimate.conf
@@ -38,7 +38,7 @@ server {
 server {
     server_name Taylor;
     listen 4252;
-    root ./website/taylor;
+    root ./website/dumas;
     location / {
         index site.html;
     }
