add _keepconnealive = false + started multipart

--- a/config/good_config/test.conf
+++ b/config/good_config/test.conf
@@ -18,8 +18,9 @@ server {
 	}
 
 	location /favicon.ico{
-		autoindex on;
+		return 301 http://localhost/404.html;
 	}
+
 	location /imageGIF.html{
 
 	}
@@ -34,8 +35,15 @@ server {
 		index index.html;
 	}
 
-    location = /coucou {
-        return 301 http://localhost;
+  location = /coucou/ {
+        cgi .php welcome.php;        
+        set_method POST DELETE GET on;
+        upload_location /upload/;
+    }
+location = /upload {
+        cgi .php welcome.php;        
+        set_method POST DELETE GET on;
+        upload_location /upload/;
     }
 
 	location / {
