--- a/config/good_config/taylor.conf
+++ b/config/good_config/taylor.conf
@@ -1,7 +1,7 @@
 server {
     server_name Taylor;
     listen 4252;
-    root ./website/taylor;
+    root ./html;
     location / {
         index site.html;
     }
