--- a/config/good_config/test.conf
+++ b/config/good_config/test.conf
@@ -1,5 +1,5 @@
 server {
-	listen 127.0.0.1:4256;
+	listen 127.0.0.1:4255;
 	root ./tester/YoupiBanane;
 	server_name	webserv;
 
@@ -14,5 +14,10 @@ server {
 		set_method GET on;
 		alias ./tester/YoupiBanane/;
 		index youpi.bad_extension nop/youpi.bad_extension;
+	}
+    location /directory/ {
+		set_method GET off;
+		alias ./tester/;
+		index tester nop/youpi.bad_extension;
 	}
 }
