--- a/config/good_config/taylor.conf
+++ b/config/good_config/taylor.conf
@@ -1,18 +1,8 @@
 server {
-    server_name www.leo.com;
-    listen 127.0.0.1:4257;
-	root ./website/dumas/;
-	location / {
-		index site.html;
-	}
-}
-
-
-server {
-    server_name www.leo.com;
-    listen 128.0.0.1:4257;
-	root ./website/dumas/;
-	location / {
-		index site.html;
-	}
+    server_name Taylor;
+    listen 4252;
+    root ./website/taylor;
+    location / {
+        index site.html;
+    }
 }
