--- a/config/good_config/ultimate.conf
+++ b/config/good_config/ultimate.conf
@@ -1,5 +1,5 @@
-biloute {
-    listen 127.0.0.1:4249;
+server {
+    listen 127.0.0.1:4250;
     server_name webserv ;
     client_max_body_size 12k ;
     root ./html/cgi;
@@ -38,7 +38,7 @@ biloute {
 server {
     server_name Taylor;
     listen 4252;
-    root ./website/dumas;
+    root ./website/taylor;
     location / {
         index site.html;
     }
