--- a/config/good_config/taylor.conf
+++ b/config/good_config/taylor.conf
@@ -1,18 +1,9 @@
 server {
-    server_name www.leo.com;
-    listen 127.0.0.1:4257;
-	root ./website/dumas/;
-	location / {
-		index site.html;
-	}
-}
+	server_name root_test;
+	listen 127.0.0.1:4249;
+	root ./website;
 
-
-server {
-    server_name www.leo.com;
-    listen 128.0.0.1:4257;
-	root ./website/dumas/;
-	location / {
-		index site.html;
+	location /dumas {
+	index site.html;
 	}
 }
