--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -11,66 +11,70 @@ http {
     client_max_body_size 100;
 
     server {
-        listen       4247;
+        listen       4244;
         server_name  webserv;
         # Access and error logs
         access_log  /var/log/nginx/access.log;
         error_log   /var/log/nginx/error.log debug;
-        root /usr/share/nginx/html;
+        root /usr/share/nginx/html/html2;
 
-        location /html2/ {
-            # Log all GET and POST requests to a file
-            access_log /var/log/nginx/endpoint_access.log combined;
 
-            # Handle GET requests
-            # root /html/;
-            # index index.html;
-            # autoindex on;
-            # Custom handling for POST requests
-            set $post_data_handled 0;
-            if ($request_method = POST) {
-                set $post_data_handled 1;
-            }       
-            add_header X-Debug-Webserv-Type "$http_webserv_type" always;
-            add_header X-Debug-Request-Method $request_method always;
-            # if ($http_webserv_type = "bonjour"){
-            #     return 200 'POST request received on default server with webserv_type = bonjour';
-            #     }
-            #
-            # Return response for POST requests
-            if ($post_data_handled) {
-                return 200 'POST request received on default server';
-            }
-
-            # Default behavior for GET requests
-            # try_files $uri $uri/ =404;
-
-            # Handle other request methods with a 405 Method Not Allowed response
-            if ($request_method != GET) {
-                return 405;
-            }
-        }
-        # location /html2/html3/ {
+		location bonjour.html/ {
+			autoindex on;
+		}
+        # location /html2/ {
+        #     # Log all GET and POST requests to a file
         #     access_log /var/log/nginx/endpoint_access.log combined;
-        #     autoindex on;
+
+        #     # Handle GET requests
+        #     # root /html/;
+        #     # index index.html;
+        #     # autoindex on;
+        #     # Custom handling for POST requests
+        #     set $post_data_handled 0;
+        #     if ($request_method = POST) {
+        #         set $post_data_handled 1;
+        #     }       
+        #     add_header X-Debug-Webserv-Type "$http_webserv_type" always;
+        #     add_header X-Debug-Request-Method $request_method always;
+        #     # if ($http_webserv_type = "bonjour"){
+        #     #     return 200 'POST request received on default server with webserv_type = bonjour';
+        #     #     }
+        #     #
+        #     # Return response for POST requests
+        #     if ($post_data_handled) {
+        #         return 200 'POST request received on default server';
+        #     }
+
+        #     # Default behavior for GET requests
+        #     # try_files $uri $uri/ =404;
+
+        #     # Handle other request methods with a 405 Method Not Allowed response
         #     if ($request_method != GET) {
         #         return 405;
         #     }
         # }
-        location /bonjour/ {
-            return 418;
-        }
-        location /bonjour/salut
-            {
-            return 419;
-        }
-        location /favicon.ico {
+        # # location /html2/html3/ {
+        # #     access_log /var/log/nginx/endpoint_access.log combined;
+        # #     autoindex on;
+        # #     if ($request_method != GET) {
+        # #         return 405;
+        # #     }
+        # # }
+        # location /bonjour/ {
+        #     return 418;
+        # }
+        # location /bonjour/salut
+        #     {
+        #     return 419;
+        # }
+        # location /favicon.ico {
 
-            access_log /var/log/nginx/endpoint_access.log combined;
-             if ($request_method != GET) {
-                return 405;
-            }
-        }
+        #     access_log /var/log/nginx/endpoint_access.log combined;
+        #      if ($request_method != GET) {
+        #         return 405;
+        #     }
+        # }
         #
         # location /bonjour{
         #     return 305;
